[package]
name = "mini-haskell"
version = "0.1.0"
authors = ["Krantz-XRF <Krantz.XRF@outlook.com>"]
edition = "2018"
repository = "https://github.com/Krantz-XRF/mini-haskell.git"
homepage = "https://github.com/Krantz-XRF/mini-haskell.git"
license = "AGPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
