[package]
name = "rlex"
version = "0.1.0"
authors = ["Xie Ruifeng <Krantz.XRF@outlook.com>"]
edition = "2018"
repository = "https://github.com/Krantz-XRF/mini-haskell.git"
homepage = "https://github.com/Krantz-XRF/mini-haskell.git"
license = "AGPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
ucd-util = "0.1"
derivative = "2.2"

[dev-dependencies]
indoc = "1.0"
